[package]
name = "fighting-game"
version = "0.1.0"
authors = ["Enjin"]
edition = "2021"

[profile.release]
overflow-checks = false

[dependencies]
efinity-contracts = { path = "../efinity-dev/contracts/efinity-contracts", default-features = false }
scale = { version = "3", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

ink_env = { version = "3.2.0", default-features = false }
ink_lang = { version = "3.2.0", default-features = false }
ink_metadata = { version = "3.2.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.2.0", default-features = false }
ink_primitives = { version = "3.2.0", default-features = false }
ink_storage = { version = "3.2.0", default-features = false }

#[dev-dependencies]
#efinity-contracts = { path = "../efinity-dev/contracts/efinity-contracts", features = ["test-utils"] }

[lib]
name = "fighting_game"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
  "ink_env/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_storage/std",
  "ink_prelude/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
  "efinity-contracts/std",
]

# this shouldn't be needed, but using as a dev-dependency is not working
test-utils = ["efinity-contracts/test-utils"]
